--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
-    "multer": "^1.4.5-lts.1"
+    "moongose": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7"
   }
 }
