--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   webnode:
-    env_file: ./Backend/.env
+    env_file: ./.env
     container_name: node-api
     restart: always
     build: ./Backend
@@ -12,11 +12,20 @@ services:
       - mongo
     volumes:
       - ./Backend/:/app
-  
+
   mongo:
     container_name: mongodb
     image: mongo
     ports:
       - "27020:27017"
 
-
+  angular:
+    container_name: frontend
+    restart: always
+    build: ./Frontend
+    ports:
+      - "4220:4200"
+    links:
+      - webnode
+    volumes:
+      - ./Frontend/:/app
