--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build:ssr": "ng build && ng run frontend:dis/frontend/server/server",
     "serve:ssr:Frontend": "node dist/frontend/server/server.mjs"
   },
   "private": true,
@@ -20,7 +21,8 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "@angular/ssr": "^18.1.1",
+    "@angular/ssr": "^18.2.9",
+    "@nguniversal/express-engine": "^7.0.1",
     "express": "^4.18.2",
     "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
